--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Cyber Awareness Hub</h2>
-        <p>Protect yourself from <span class="typed" data-typed-items="Phishing, Password Leaks, Malware, Identity Theft">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>Protect yourself from <span class="typed" data-typed-items="Phishing, Password Leaks, Malware, Identity Theft">Phishing</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
