--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>About</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <h2>Overview</h2>
+        <p>With the rise of technology and the internet, cybersecurity has become more important than ever. The threat of bad actors online with malicious intentions is something people need to be aware of and prepared for. This website will give you general advice and tips on navigating the internet safely and keeping your personal information secure, by addressing common pitfalls as well as mistakes you can make and tactics these bad actors use to trick you. </p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
