--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Phishing</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>Insert tiny "that email you got saying yada yada yada?" anecdotal fun little intro to phishing</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -284,15 +284,17 @@
             <h3 class="resume-title">Background</h3>
 
             <div class="resume-item pb-0">
-              <p><em>Phishing is a type of cyber attack in which the attacker poses as someone trustworthy or creates a fake scenario to trick you into giving up sensitive information.</em></p>
+              <p><strong>Phishing is a type of cyber attack in which the attacker poses as someone trustworthy or creates a fake scenario to trick you into giving up sensitive information.</strong></p>
               <h4>Types of Phishing</h4>
               <p><em>The targeting methods attackers use</em></p>
               <ul>
                 <li>Bulk Phishing</li>
                 <li>Spear Phishing</li>
                 <li>Whaling</li>
+              </ul>
               <h4>Phishing Mediums</h4>
               <p><em>How attackers choose to contact you</em></p>
+              <ul>
                 <li>Email phishing</li>
                 <li>Smishing</li>
                 <li>Vishing</li>
