Phishing Overview Final Edit

--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
             <h3 class="resume-title">Background</h3>
 
             <div class="resume-item pb-0">
-              <p><strong>Phishing is a type of cyber attack in which the attacker poses as someone trustworthy or creates a fake scenario to trick you into giving up sensitive information.</strong></p>
+              <p><em><strong>Phishing is a type of cyber attack in which the attacker poses as someone trustworthy or creates a fake scenario to trick you into giving up sensitive information.</em></strong></p>
               <h4>Types of Phishing</h4>
-              <p><em>The targeting methods attackers use</em></p>
+              <p class="muted"><em>The targeting methods attackers use</em></p>
               <ul>
                 <li>Bulk Phishing</li>
                 <li>Spear Phishing</li>
