Small Phishing Overview Edit

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
         <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Phishing</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
-            <li><a href="#">Dropdown 1</a></li>
+            <li><a href="#phishing">Dropdown 1</a></li>
             <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
                 <li><a href="#">Deep Dropdown 1</a></li>
@@ -288,16 +288,16 @@
               <h4>Types of Phishing</h4>
               <p class="muted"><em>The targeting methods attackers use</em></p>
               <ul>
-                <li>Bulk Phishing</li>
-                <li>Spear Phishing</li>
-                <li>Whaling</li>
+                <li><b>Bulk Phishing:</b></li>
+                <li><b>Spear Phishing:</b></li>
+                <li><b>Whaling:</b></li>
               </ul>
               <h4>Phishing Mediums</h4>
               <p><em>How attackers choose to contact you</em></p>
               <ul>
-                <li>Email phishing</li>
-                <li>Smishing</li>
-                <li>Vishing</li>
+                <li><b>Email phishing:</b></li>
+                <li><b>Smishing:</b></li>
+                <li><b>Vishing:</b></li>
               </ul>
             </div><!-- Edn Resume Item -->
 
