--- a/index.html
+++ b/index.html
@@ -358,29 +358,26 @@
 
           <div class="row gy-4 justify-content-center">
             <div class="col-lg-4">
-              <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="">
+              <img src="assets/img/smishing-example.jpeg" class="img-fluid" alt="Smishing Example">
             </div>
             <div class="col-lg-8 content">
-              <h2>UI/UX Designer &amp; Web Developer.</h2>
+              <h2>How does a phishing attempt look like?</h2>
               <p class="fst-italic py-3">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
+                Phishing attacks can take on many forms, and the example shown here is of a smishing attempt via text message. Some of its giveawaays include:
               </p>
               <div class="row">
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Unsafe Hyperlink: </strong> <span>Use of 'http' and URL shorteners like bit.ly</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Sense of Urgency: </strong> <span>"...due to expire today" indicating a time limit</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Weird Grammar: </strong> <span>Random capitalization</span></li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Consequence: </strong> <span>Presents a negative outcome if you don't take action</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Nonsensical Premise: </strong> <span>AppleIDs wouldn't 'expire', the scenario doesn't make sense</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Generic Greeting: </strong> <span>"Dear Customer" used </span></li>
                   </ul>
                 </div>
               </div>
