--- a/index.html
+++ b/index.html
@@ -366,19 +366,19 @@
                 Phishing attacks can take on many forms, and the example shown here is of a smishing attempt via text message. Some of its giveawaays include:
               </p>
               <div class="row">
-                <div class="col-lg-6 p-3">
-                  <ul class="lh-lg mb-0">
-                    <li><i class="bi bi-chevron-right"></i> <strong>Unsafe Hyperlink: </strong> <span>Use of 'http' and URL shorteners like bit.ly</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Sense of Urgency: </strong> <span>"...due to expire today" indicating a time limit</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Weird Grammar: </strong> <span>Random capitalization</span></li>
+                <div class="col-lg-6 px-3">
+                  <ul class="mb-0">
+                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Unsafe Hyperlink: </strong> <span>Use of 'http' and URL shorteners like bit.ly</span></li>
+                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Sense of Urgency: </strong> <span>"...due to expire today" indicating a time limit</span></li>
+                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Weird Grammar: </strong> <span>Random capitalization</span></li>
                   </ul>
                 </div>
 
-                <div class="col-lg-6 p-3">
-                  <ul class="lh-lg mb-0">
-                    <li><i class="bi bi-chevron-right"></i> <strong>Consequence: </strong> <span>Presents a negative outcome if you don't take action</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Nonsensical Premise: </strong> <span>AppleIDs wouldn't 'expire', the scenario doesn't make sense</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Generic Greeting: </strong> <span>"Dear Customer" used</span></li>
+                <div class="col-lg-6 px-3">
+                  <ul class="mb-0">
+                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Consequence: </strong> <span>Presents a negative outcome if you don't take action</span></li>
+                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Nonsensical Premise: </strong> <span>AppleIDs wouldn't 'expire', the scenario doesn't make sense</span></li>
+                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Generic Greeting: </strong> <span>"Dear Customer" used</span></li>
                   </ul>
                 </div>
               </div>
