--- a/index.html
+++ b/index.html
@@ -368,17 +368,17 @@
               <div class="row">
                 <div class="col-lg-6 px-3">
                   <ul class="mb-0">
-                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Unsafe Hyperlink: </strong> <span>Use of 'http' and URL shorteners like bit.ly</span></li>
-                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Sense of Urgency: </strong> <span>"...due to expire today" indicating a time limit</span></li>
-                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Weird Grammar: </strong> <span>Random capitalization</span></li>
+                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Unsafe Hyperlink </strong> <span>Use of 'http' and URL shorteners like bit.ly</span></li>
+                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Sense of Urgency </strong> <span>"...due to expire today" indicating a time limit</span></li>
+                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Weird Grammar </strong> <span>Random capitalization</span></li>
                   </ul>
                 </div>
 
                 <div class="col-lg-6 px-2">
                   <ul class="mb-0">
-                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Consequence: </strong> <span>Presents a negative outcome if you don't take action</span></li>
-                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Nonsensical Premise: </strong> <span>AppleIDs wouldn't 'expire', the scenario doesn't make sense</span></li>
-                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Generic Greeting: </strong> <span>"Dear Customer" used</span></li>
+                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Consequence </strong> <span>Presents a negative outcome if you don't take action</span></li>
+                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Nonsensical Premise </strong> <span>AppleIDs wouldn't 'expire', the scenario doesn't make sense</span></li>
+                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Generic Greeting </strong> <span>"Dear Customer" used</span></li>
                   </ul>
                 </div>
               </div>
