Edit to previous again

--- a/index.html
+++ b/index.html
@@ -368,20 +368,21 @@
               <div class="row">
                 <div class="col-lg-6 px-3">
                   <ul class="mb-0">
-                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Unsafe Hyperlink:</strong> Use of 'http' and URL shorteners like bit.ly</li>
-                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Sense of Urgency:</strong> "...due to expire today" indicating a time limit</li>
-                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Weird Grammar:</strong> Random capitalization</li>
+                    <li><i class="bi bi-chevron-right me-2"></i> <strong style="white-space: nowrap;">Unsafe Hyperlink:</strong> Use of 'http' and URL shorteners like bit.ly</li>
+                    <li><i class="bi bi-chevron-right me-2"></i> <strong style="white-space: nowrap;">Sense of Urgency:</strong> "...due to expire today" indicating a time limit</li>
+                    <li><i class="bi bi-chevron-right me-2"></i> <strong style="white-space: nowrap;">Weird Grammar:</strong> Random capitalization</li>
                   </ul>
                 </div>
 
                 <div class="col-lg-6 px-2">
                   <ul class="mb-0">
-                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Consequence:</strong> Presents a negative outcome if you don't take action</li>
-                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Nonsensical Premise:</strong> AppleIDs wouldn't 'expire', the scenario doesn't make sense</li>
-                    <li><i class="bi bi-chevron-right me-2"></i> <strong>Generic Greeting:</strong> "Dear Customer" used</li>
+                    <li><i class="bi bi-chevron-right me-2"></i> <strong style="white-space: nowrap;">Consequence:</strong> Presents a negative outcome if you don't take action</li>
+                    <li><i class="bi bi-chevron-right me-2"></i> <strong style="white-space: nowrap;">Nonsensical Premise:</strong> AppleIDs wouldn't 'expire', the scenario doesn't make sense</li>
+                    <li><i class="bi bi-chevron-right me-2"></i> <strong style="white-space: nowrap;">Generic Greeting:</strong> "Dear Customer" used</li>
                   </ul>
                 </div>
               </div>
+
 
               <p class="py-3">
                 Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
