Edit to previous again

--- a/index.html
+++ b/index.html
@@ -363,22 +363,40 @@
             <div class="col-lg-8 content">
               <h2>How does a phishing attempt look like?</h2>
               <p class="fst-italic py-3">
-                Phishing attacks can take on many forms, and the example shown here is of a smishing attempt via text message. Some of its giveawaays include:
+                Phishing attacks can take on many forms, and the example shown here is of a smishing attempt via text message. Some of its giveaways include:
               </p>
               <div class="row">
                 <div class="col-lg-6 px-3">
                   <ul class="mb-0">
-                    <li><i class="bi bi-chevron-right me-2"></i> <strong style="white-space: nowrap;">Unsafe Hyperlink:</strong> Use of 'http' and URL shorteners like bit.ly</li>
-                    <li><i class="bi bi-chevron-right me-2"></i> <strong style="white-space: nowrap;">Sense of Urgency:</strong> "...due to expire today" indicating a time limit</li>
-                    <li><i class="bi bi-chevron-right me-2"></i> <strong style="white-space: nowrap;">Weird Grammar:</strong> Random capitalization</li>
+                    <li class="d-flex">
+                      <i class="bi bi-chevron-right me-2"></i>
+                      <p class="m-0"><strong>Unsafe Hyperlink:</strong> Use of 'http' and URL shorteners like bit.ly</p>
+                    </li>
+                    <li class="d-flex">
+                      <i class="bi bi-chevron-right me-2"></i>
+                      <p class="m-0"><strong>Sense of Urgency:</strong> "...due to expire today" indicating a time limit</p>
+                    </li>
+                    <li class="d-flex">
+                      <i class="bi bi-chevron-right me-2"></i>
+                      <p class="m-0"><strong>Weird Grammar:</strong> Random capitalization</p>
+                    </li>
                   </ul>
                 </div>
 
                 <div class="col-lg-6 px-2">
                   <ul class="mb-0">
-                    <li><i class="bi bi-chevron-right me-2"></i> <strong style="white-space: nowrap;">Consequence:</strong> Presents a negative outcome if you don't take action</li>
-                    <li><i class="bi bi-chevron-right me-2"></i> <strong style="white-space: nowrap;">Nonsensical Premise:</strong> AppleIDs wouldn't 'expire', the scenario doesn't make sense</li>
-                    <li><i class="bi bi-chevron-right me-2"></i> <strong style="white-space: nowrap;">Generic Greeting:</strong> "Dear Customer" used</li>
+                    <li class="d-flex">
+                      <i class="bi bi-chevron-right me-2"></i>
+                      <p class="m-0"><strong>Consequence:</strong> Presents a negative outcome if you don't take action</p>
+                    </li>
+                    <li class="d-flex">
+                      <i class="bi bi-chevron-right me-2"></i>
+                      <p class="m-0"><strong>Nonsensical Premise:</strong> AppleIDs wouldn't 'expire', the scenario doesn't make sense</p>
+                    </li>
+                    <li class="d-flex">
+                      <i class="bi bi-chevron-right me-2"></i>
+                      <p class="m-0"><strong>Generic Greeting:</strong> "Dear Customer" used</p>
+                    </li>
                   </ul>
                 </div>
               </div>
