--- a/index.html
+++ b/index.html
@@ -370,15 +370,15 @@
                   <ul class="mb-0">
                     <li class="d-flex">
                       <i class="bi bi-chevron-right me-2"></i>
-                      <p class="m-0"><strong>Unsafe Hyperlink:</strong> Use of 'http' and URL shorteners like bit.ly</p>
+                      <p class="m-0"><strong>Unsafe Hyperlink:</strong>Use of 'http' and URL shorteners like bit.ly</p>
                     </li>
                     <li class="d-flex">
                       <i class="bi bi-chevron-right me-2"></i>
-                      <p class="m-0"><strong>Sense of Urgency:</strong> "...due to expire today" indicating a time limit</p>
+                      <p class="m-0"><strong>Sense of Urgency:</strong>"...due to expire today" indicating a time limit</p>
                     </li>
                     <li class="d-flex">
                       <i class="bi bi-chevron-right me-2"></i>
-                      <p class="m-0"><strong>Weird Grammar:</strong> Random capitalization</p>
+                      <p class="m-0"><strong>Weird Grammar:</strong>Random capitalization and grammar errors</p>
                     </li>
                   </ul>
                 </div>
@@ -387,15 +387,15 @@
                   <ul class="mb-0">
                     <li class="d-flex">
                       <i class="bi bi-chevron-right me-2"></i>
-                      <p class="m-0"><strong>Consequence:</strong> Presents a negative outcome if you don't take action</p>
+                      <p class="m-0"><strong>Consequence:</strong>Presents a negative outcome if you don't take action</p>
                     </li>
                     <li class="d-flex">
                       <i class="bi bi-chevron-right me-2"></i>
-                      <p class="m-0"><strong>Nonsensical Premise:</strong> AppleIDs wouldn't 'expire', the scenario doesn't make sense</p>
+                      <p class="m-0"><strong>Nonsensical Premise:</strong>Doesn't make sense for AppleIDs to expire</p>
                     </li>
                     <li class="d-flex">
                       <i class="bi bi-chevron-right me-2"></i>
-                      <p class="m-0"><strong>Generic Greeting:</strong> "Dear Customer" used</p>
+                      <p class="m-0"><strong>Generic Greeting:</strong>"Dear Customer" used in the beginning</p>
                     </li>
                   </ul>
                 </div>
