--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                     </li>
                     <li class="d-flex">
                       <i class="bi bi-chevron-right me-2"></i>
-                      <p class="m-0"><strong>Nonsensical Premise:</strong>Doesn't make sense for AppleIDs to expire</p>
+                      <p class="m-0"><strong>Nonsensical Premise:</strong>Doesn't make sense for AppleIDs to "expire"</p>
                     </li>
                     <li class="d-flex">
                       <i class="bi bi-chevron-right me-2"></i>
