Fleshing out phishing headings

--- a/index.html
+++ b/index.html
@@ -291,16 +291,16 @@
               <h4>Types of Phishing</h4>
               <p class="muted"><em>The targeting methods attackers use</em></p>
               <ul>
-                <li><b>Bulk Phishing:</b></li>
-                <li><b>Spear Phishing:</b></li>
-                <li><b>Whaling:</b></li>
+                <li><b>Bulk Phishing:</b> Phishing attempts mass-sent to thousands of inboxes hoping for a hit, the most common form which anyone can receive.</li>
+                <li><b>Spear Phishing:</b> Coordinated attack which is personalized to a specific individual that they target, with attackers researching the victim beforehand.</li>
+                <li><b>Whaling:</b> A form of spear phishing that targets exclusively high-ranking executives, with extensive research and preparation put into the attack.</li>
               </ul>
               <h4>Phishing Mediums</h4>
               <p><em>How attackers choose to contact you</em></p>
               <ul>
-                <li><b>Email phishing:</b></li>
-                <li><b>Smishing:</b></li>
-                <li><b>Vishing:</b></li>
+                <li><b>Email phishing:</b> Using emails to send their attacks</li>
+                <li><b>Smishing:</b> Texting the victim through SMS messages</li>
+                <li><b>Vishing:</b> Voice calling or sending voice messages to the victim</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
