Adding an intro paragraph to phishing

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
       <!-- <img src="assets/img/logo.png" alt=""> -->
-      <h1 class="sitename">Alex Smith</h1>
+      <h1 class="sitename">Cyber Awareness Hub</h1>
     </a>
 
     <div class="social-links text-center">
@@ -276,7 +276,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Phishing</h2>
-        <p>Insert tiny "that email you got saying yada yada yada?" anecdotal fun little intro to phishing</p>
+        <p>Most people reading this have received a phishing attack at some point, even if they didn't realize it. That email you got telling you that you won a lottery and need to provide your bank details, that you could tell felt off? An age old example of phishing. That call you got from the "IRS" asking for your personal information that you hung up on because of how unprofessional it sounded? The IRS would never ask for your sensitive info on a call like that. Another case of phishing, and next time, it may not be as easy to sniff out. Not to worry, because here we will dive into what phishing really is and how you can avoid falling victim to it.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
